--- a/index.html
+++ b/index.html
@@ -210,13 +210,18 @@
       </div>
       <div class="app-zurag">
         <div class="fb"><img src="./Facebook Icon.png" alt="" />Facebook</div>
+       
         <div class="ig">
           <img src="./Instagram Icon.png" alt="" /> Instagram
         </div>
+        <div class="lg">
+          <img
+            class="lg"
+            src="./86c0cdfe0a75f7a2c1c595781b7f4589e61e3895.png"
+            alt=""
+        /></div>
+        
       </div>
-      <!-- <div class="zrag">
-        <div class="zrg"><img src="./logo 1.pdf" alt="" /></div>
-      </div> -->
     </div>
   </body>
 </html>
