--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       </div>
       <div class="app-zurag">
         <div class="fb"><img src="./Facebook Icon.png" alt="" />Facebook</div>
-       
+
         <div class="ig">
           <img src="./Instagram Icon.png" alt="" /> Instagram
         </div>
@@ -219,8 +219,8 @@
             class="lg"
             src="./86c0cdfe0a75f7a2c1c595781b7f4589e61e3895.png"
             alt=""
-        /></div>
-        
+          />
+        </div>
       </div>
     </div>
   </body>
